<resources>
    <string name="app_name">FemiJirani</string>
    <string name="profile">Profile</string>
    <string name="maps">Maps</string>
    <string name="updates">Updates</string>
    <string name="statistics">Statistics</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="take_a_tour">Take a tour</string>
    <string name="logout">Logout</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>
