<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/profile" android:title="@string/profile" android:icon="@drawable/profile"/>
    <item android:id="@+id/maps" android:title="@string/maps" android:icon="@drawable/map"/>
    <item android:id="@+id/updates" android:title="@string/updates" android:icon="@drawable/updates"/>
    <item android:id="@+id/statistics" android:title="@string/statistics" android:icon="@drawable/statistics"/>
    <item android:id="@+id/notes" android:title="@string/notes" android:icon="@drawable/notes"/>
    <item android:id="@+id/settings" android:title="@string/settings" android:icon="@drawable/settings"/>
    <item android:id="@+id/takeATour" android:title="@string/take_a_tour" android:icon="@drawable/tour"/>
    <item android:id="@+id/logout" android:title="@string/logout" android:icon="@drawable/logout"/>


</menu>